Searchbar overlap with header fixed. Improved css with feedback and improved html for header.

--- a/threejs/styles/feedback.css
+++ b/threejs/styles/feedback.css
@@ -1,6 +1,7 @@
 :root{
   --bg: #e9e9e9;
-  --card-bg: #fafafa94;
+  /* --card-bg: #fafafa94; */
+  --card-bg: #f3fbfca3;
   --muted: #5b5b5b;
   --border: #d7d7d7;
   --accent: #067283;
@@ -73,7 +74,7 @@ form{ width:100%; }
 /* Labels and fields */
 .field-label{
   display:block;
-  font-size:13px;
+  font-size:14px;
   font-weight:600;
   color:#000000;
   margin: 12px 0 6px;
@@ -81,7 +82,7 @@ form{ width:100%; }
 .field-input{
   display:block;
   width:100%;
-  padding:10px 12px;
+  padding:10px 10px;
   font-size:14px;
   color:#000000;
   background:#f9fbfdcd;
